night work done

--- a/index.html
+++ b/index.html
@@ -32,8 +32,19 @@
 </head>
 
 <body>
+    <!-- --------------------------heading part--------------------------- -->
+    <header>
+        <p class="head-line text-center mt-9 text-green-700 font-bold text-5xl">Financial Planning</p>
+    </header>
     <main>
-        <p>Financial Planning</p>
+        <section class="mx-auto w-10/12 flex justify-between">
+            <div>
+                <img src="./images/visual-stories-micheile-SoT4-mZhyhE-unsplash.jpg" alt="">
+            </div>
+            <div>
+                <p class="text-center fonts">Income</p>
+            </div>
+        </section>
     </main>
     <!-- --------------------------java_script---------------------------- -->
     <script src="./js/script.js"></script>
