--- a/index.html
+++ b/index.html
@@ -36,43 +36,72 @@
     <header>
         <p class="head-line text-center mt-9 text-lime-900 font-bold text-5xl">Financial Planning</p>
     </header>
+
+    <!-- ----------------------------main_part---------------------------- -->
     <main>
         <section class="mx-auto w-10/12 grid lg:grid-cols-2 sm:grid-cols-1 gap-4">
-            <div>
-                <img class="w-10/12 mb-3 mt-20" src="./images/visual-stories-micheile-SoT4-mZhyhE-unsplash.jpg" alt="">
+
+            <!-- left_side -->
+            <div class="flex justify-center">
+                <img class="w-10/12 mb-16 mt-20" src="./images/visual-stories-micheile-SoT4-mZhyhE-unsplash.jpg" alt="">
             </div>
+
+            <!-- right_side -->
             <div class="mt-14 bg-lime-100 p-8 rounded-3xl mb-5">
+
+                <!-- income_&_expense_&_balance_calculation -->
+
+                <!-- income -->
                 <p class="text-center main-fonts">Income</p>
-                <div class="flex justify-center my-4">
+                <div class="flex justify-center my-4 mr-5">
                     <p class="normal-fonts ">Income:</p>
-                    <input class="ml-8 w-2/5 bg-slate-300 rounded-xl" type="text" id="">
+                    <input class="ml-8 w-52 bg-slate-300 rounded-md" type="text" id="income">
+                    <!-- <p id="income-error" class="error my-4 text-center">❌Please enter valid amount</p> -->
                 </div>
+
+                <!-- expenses -->
                 <p class="text-center main-fonts">Expenses</p>
                 <div class="flex justify-center my-4">
-                    <p class="normal-fonts ">Income:</p>
-                    <input class="ml-8 w-2/5 bg-slate-300 rounded-xl" type="text" id="">
+                    <p class="normal-fonts ">Food:</p>
+                    <input class="ml-8 w-52 bg-slate-300 rounded-md" type="text" id="food-expenses">
+                    <!-- <p id="food-error" class="error my-4 text-center">❌Please enter valid amount</p> -->
                 </div>
                 <div class="flex justify-center my-4">
-                    <p class="normal-fonts ">Income:</p>
-                    <input class="ml-8 w-2/5 bg-slate-300 rounded-xl" type="text" id="">
+                    <p class="normal-fonts ">Rent:</p>
+                    <input class="ml-8 w-52 bg-slate-300 rounded-md" type="text" id="rent-expenses">
+                    <!-- <p id="rent-error" class="error my-4 text-center">❌Please enter valid amount</p> -->
                 </div>
-                <div class="flex justify-center my-4">
-                    <p class="normal-fonts ">Income:</p>
-                    <input class="ml-8 w-2/5 bg-slate-300 rounded-xl" type="text" id="">
+                <div class="flex justify-center mr-6 my-4">
+                    <p class="normal-fonts ">Clothes:</p>
+                    <input class="ml-8 w-52 bg-slate-300 rounded-md" type="text" id="clothes-expenses">
+                    <!-- <p id="clothes-error" class="error my-4 text-center">❌Please enter valid amount</p> -->
                 </div>
                 <div class="flex justify-center">
-                    <button class="bg-lime-800 text-white font-bold px-12 py-2 rounded-2xl my-5">Calculate</button>
+                    <button id="calculate-btn"
+                        class="bg-lime-800 text-white font-bold px-12 py-2 rounded-2xl my-5">Calculate</button>
                 </div>
-                <p class="text-center main-fonts my-4">Total Expenses: 5500 </p>
-                <p class="text-center main-fonts my-4">Balance: 4500 </p>
+                <p class="text-center main-fonts my-4">Total Expenses: <span id="total-expenses">0</span> </p>
+
+                <!-- balance -->
+                <p class="text-center main-fonts my-4">Balance: <span id="balance">0</span> </p>
+
+                <!-- error_massage -->
+                <p id="error1" class="error my-4 text-center">❌Oops!You don't have enough income to spend this way</p>
+
+                <!-- savings_calculation -->
                 <div class="flex justify-evenly items-center my-6">
                     <p class="normal-fonts ">Save:</p>
-                    <input class=" bg-slate-300 rounded-xl h-7" type="text" id="">
+                    <input class=" bg-slate-300 rounded-md h-7" type="text" id="save">
+                    <!-- <p id="save-error" class="error my-4 text-center">❌Please enter valid amount</p> -->
                     <p class="normal-fonts ">%</p>
-                    <button class="bg-lime-800 text-white font-bold px-12 py-2 rounded-2xl ">Save</button>
+                    <button id="save-btn" class="bg-lime-800 text-white font-bold px-12 py-2 rounded-2xl ">Save</button>
                 </div>
-                <p class="text-center main-fonts my-4">Saving Amount: 2000 </p>
-                <p class="text-center main-fonts my-4">Remaining Balance: 2500 </p>
+                <p class="text-center main-fonts my-4">Saving Amount: <span id="saving-amount">0</span> </p>
+                <p class="text-center main-fonts my-4">Remaining Balance: <span id="remaining-balance">0</span> </p>
+
+                <!-- error_massage -->
+                <p id="error2" class="error my-4 text-center">❌Oops!You don't have enough income to save at this rate
+                </p>
             </div>
         </section>
     </main>
